# AndroidDemo

./: .gitignore  FileNameStandard.kts  README.md  build.gradle  gradle.properties  local.properties  settings.gradle  todo.md
NDKAndCpp/ndk/cmake相关/: CMakeLists.txt  cmake相关.text
feature/: CMakeLists.txt  build.gradle
feature/src/androidTest/java/sst/example/androiddemo/feature/: ExampleInstrumentedTest.kt
feature/src/jni/: jni.text
feature/src/jni/cmake相关/: CMakeLists.txt
feature/src/jni/ffmpeg库相关/: ffmpeg相关.text
feature/src/jni/makefile原理/: makefile.text
feature/src/jni/opengl/: opengl.md
feature/src/jni/编译/: compile.text
feature/src/jni/计算机图形学/: 01-概述.md  03-transformation.md  04-transformation深入.md  05-rasterization-1.md  05-rasterization-2.md  07-shading-1.md  08-shading-2.md  10-geometry-1.md  11-geometry-2.md  12-geometry-3.md  13-ray-tracing-1.md  16-ray-tracing-4.md  18-advanced-topics-in-rendering.md
feature/src/main/: AndroidManifest.xml
feature/src/main/aidl/com/example/androiddemo/: IMyBinder.aidl
feature/src/main/assets/: test.xml
feature/src/main/cpp/: AudioEncoder.cpp  audioPlayer.cpp  audioPlayer.h  autobuffer.cc  autobuffer.h  crash_monitor.cpp  crash_monitor.h  log_buffer.cc  log_buffer.h  log_crypt.cc  log_crypt.h  native-lib.cpp  native-lib.h  nativelog.cpp  nativelog.h  ptrbuffer.cc  ptrbuffer.h  音视频.text
feature/src/main/java/sst/example/androiddemo/feature/: BackgroundChangeListener.java  FastClickUtil.java  MApplication.java  MainActivity.kt
feature/src/main/java/sst/example/androiddemo/feature/Animation/: LayoutAnimationActivity.kt  RevealAnimatorActivity.java  SupportAnimationActivity.kt  ViewGroupActivity.kt  ViewPropertyAnimatorActivity.kt
feature/src/main/java/sst/example/androiddemo/feature/SystemBug/: ToastBugActivity.java
feature/src/main/java/sst/example/androiddemo/feature/activity/: BigPictureActivity.java  DialogActivity.java  DialogFragmentActivity.kt  FragmentActivity.kt  LandscapeActivity.java  LayoutActivity.kt  LinearLayoutActivity.kt  MenuActivity.kt  NormalActivity.java  NormalFragment.java  PluginActivity.kt  ServicesActivity.kt  StartForResultActivity.kt  TestOrientationActivity.java
feature/src/main/java/sst/example/androiddemo/feature/animation/: CarTransiActivity.kt  KeyFrameActivity.kt  LayoutAnimationActivity.kt  MotionLayoutActivity.kt  RevealAnimatorActivity.java  SupportAnimationActivity.kt  ViewGroupActivity.kt  ViewPropertyAnimatorActivity.kt
feature/src/main/java/sst/example/androiddemo/feature/camera/: CameraActivity.kt
feature/src/main/java/sst/example/androiddemo/feature/common/: BaseHandler.kt  LifeHandler.kt  LiveEventBus.java
feature/src/main/java/sst/example/androiddemo/feature/ffmpeg/: CrashMonitor.kt  CustomPlayer.java  CustomPlayerActivity.java  FFmpegActivity.java  FFmpegCmd.java  Log.kt
feature/src/main/java/sst/example/androiddemo/feature/graphics/: AnimatorTextActivity.kt  BitmapActivity.java  BlackWhitePictureActivity.kt  CanvasActivity.java  DrawableActivity.java  LoadingActivity.java  (+11 more)
feature/src/main/res/anim/: grid_layout_animation_from_bottom.xml  item_animation_fall_down.xml  item_animation_from_bottom.xml  layout_animation_fall_down.xml
feature/src/main/res/animator/: vector_animator.xml
feature/src/main/res/color/: color_statelist.xml
feature/src/main/res/drawable/: ainmated_vector_drawable.xml  animated_selector.xml  animation_drawable.xml  bitmap_drawable.xml  clip_drawable.xml  color_drawable.xml  ic_android_black_24dp.xml  ic_android_black_24dp_green.xml  inset_drawable.xml  layer_drawable.xml  levelist_drawable.xml  ripple_drawable.xml  scale_drawable.xml  shape_drawable.xml  statelist_drawable.xml  toast_custom_bg.xml  transition_drawable.xml
feature/src/main/res/drawable-anydpi/: ic_play_stop.xml
feature/src/main/res/layout/: activity_animation.xml  activity_animator_text.xml  activity_anr.xml  activity_big_picture.xml  activity_bitmap.xml  activity_black_white_picture.xml  activity_camera.xml  activity_camera_matrix.xml  activity_canvas.xml  activity_car_transi.xml  activity_constrain_layout.xml  activity_custom_player.xml  activity_dialog.xml  activity_dialog_fragment.xml  activity_drawable.xml  activity_dynamic_animaiton.xml  activity_ffmpeg.xml  activity_fragment.xml  activity_growing_tree.xml  activity_intent_service.xml  activity_jump.xml  activity_key_frame.xml  activity_landscape.xml  activity_launch.xml  activity_layout.xml  activity_layout_animation.xml  activity_loading.xml  activity_main.xml  activity_measure_test.xml  activity_menu.xml  activity_motion_layout.xml  activity_normal.xml  activity_oscillation.xml  activity_other.xml  activity_paint.xml  activity_particle.xml  activity_path.xml  activity_picture_drawable.xml  activity_plugin.xml  activity_qqdrag_bubble.xml  (+37 more)
feature/src/main/res/layout-land/: activity_normal.xml
feature/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
feature/src/main/res/xml/: activity_motion_layout_scene.xml  normal_wallpaper.xml  operation_accessibility.xml  prefs.xml
feature/src/test/java/sst/example/androiddemo/feature/: ExampleUnitTest.kt
(+2236 files in other folders)
